<resources>
    <string name="hello_world">Hello Round World!</string>
    <string name="app_name">VOW</string>
    <string name="prompt_email">email<font color='#ff477e'>*</font></string>
    <string name="prompt_password">password<font color='#ff477e'>*</font></string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_name">Not a valid name.</string>
    <string name="invalid_username">Not a valid username.</string>
    <string name="invalid_email">Not a valid email address.</string>
    <string name="invalid_password">Password needs to be at least 4 character long.</string>
    <string name="invalid_password_confirmation">Must be equal to password.</string>
    <string name="invalid_phone_number">Not a valid phone number.</string>
    <string name="invalid_website">Not a valid website.</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Register failed</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="register_success">Registered with success</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string-array name="typeUser">
        <item>Organization</item>
        <item>Volunteer</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="title_activity_extra_info">ExtraInfoActivity</string>
    <string name="title_activity_main_page">Main Activity</string>
    <string name="title_new_activity">New Activity</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="invalid_address">Not a valid address.</string>
    <string name="invalid_time">Not a valid day/time</string>
    <string name="invalid_participant_num">Not a valid number of participants.</string>
    <string name="invalid_duration">Not a valid duration.</string>
    <string name="activity_success">Activity created</string>
    <string name="title_activity_main_person">MainActivity</string>
    <string name="title_calendar">Calendar</string>
    <string name="update_failed">Update failed</string>
    <string name="invalid_incorrect_password">Password is incorrect.</string>
    <string name="update_success">Informations updated with success</string>
    <string name="get_activities_failed">Couldn\'t obtain activities registered.</string>
    <string name="enroll_failed">Enroll in activity failed.</string>
    <string name="title_enroll_activity">Enroll In Activity</string>
    <string name="title_feed">Home</string>
    <string name="invalid_type">Not a valid type</string>
    <string name="title_stats">Statistics</string>
    <string name="title_logout">Logout</string>
    <string name="duration">Duration: </string>
    <string name="number_participants">Participants number: </string>
    <string name="time">Time: </string>
    <string name="join">Join</string>
    <string name="activity_name">Activity name: </string>
    <string name="organization">Organization: </string>
    <string name="address">Address: </string>
    <string name="upload_image">Upload profile image:</string>
    <string name="select_image">Select Image</string>
    <string name="select_interests">Select your interests:</string>
    <string name="children">children</string>
    <string name="animals">animals</string>
    <string name="nature">nature</string>
    <string name="elderly">elderly</string>
    <string name="health">health</string>
    <string name="disabled">disabled</string>
    <string name="all">All</string>
    <string name="finish">Finish</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="learn_more">Learn more about us</string>
    <string name="remember_me">Remember Me</string>
    <string name="name">name<font color='#ff477e'>*</font></string>
    <string name="username">username<font color='#ff477e'>*</font></string>
    <string name="confirm_password">confirm password<font color='#ff477e'>*</font></string>
    <string name="phone_number">phone number</string>
    <string name="website">website</string>
    <string name="date_birth">Date Birth</string>
    <string name="next">Next</string>
    <string name="prompt_name">Name: </string>
    <string name="prompt_password2">Password: </string>
    <string name="prompt_website">Website: </string>
    <string name="prompt_phone_number">Phone Number: </string>
    <string name="save_changes">Save changes</string>
    <string name="interests">Interests: </string>
    <string name="new_password">New Password: </string>
    <string name="confirm_password_update">Confirm Password: </string>
    <string name="activity_title">Activity title</string>
    <string name="organization_activity">Activities Organization</string>
    <string name="view_activity">View Activity</string>
    <string name="activity_duration">Activity Duration :</string>
    <string name="hint_address">street, number, postal code</string>
    <string name="date">Date:</string>
    <string name="type">Type:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_calendar">Add to Google Calendar?</string>
    <string name="unjoin">Unjoin</string>
    <string name="save">Save</string>
    <string name="title_podium">Podium</string>
    <string name="first_place">1st Place</string>
    <string name="second_place">2nd Place</string>
    <string name="third_place">3rd Place</string>
    <string name="rating">Rating: </string>
    <string name="add_comment">Add a comment...</string>
    <string name="post">post</string>
    <string name="submit">Submit</string>
    <string name="image_download_failed">Image download failed</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="message_notification">Rate your last activity </string>
    <string name="my_activities">My Activities:</string>
    <string name="no_activities_available">No content available!</string>
    <string name="activities">Activities:</string>
    <string name="logout_failed">Logout failed</string>
    <string name="directions">Directions</string>
    <string name="title_activities_data">My Activities</string>
    <string name="about_me">About Me</string>
    <string name="confirm">Confirm</string>
    <string name="enrolled_activities">Activities I\'ve Participated:</string>
    <string name="route_name">Route name:</string>
    <string name="route_duration">Route Duration:</string>
    <string name="title_new_route">New Route</string>
    <string name="title_my_activities">My Activities</string>
    <string name="title_enrolled_activities">Enrolled Activities</string>
    <string name="title_future_activities">Future Activities</string>
    <string name="set_rating_failed">Rate failed, please try again</string>
    <string name="choose_image">Add a picture</string>
    <string name="set_image_failed">Please insert the activities name before choosing an image.</string>
    <string name="dessert">It\'s like a dessert in here!</string>
    <string name="no_activities">You don\'t have any activities :(</string>
    <string name="organization_title">Organization</string>
    <string name="password_not_available">Please insert password</string>
    <string name="username_email">username/email<font color='#ff477e'>*</font></string>
    <string name="date_no_valid">Cannot create activities for the past</string>
    <string name="commit_rating">Thank you for your rating</string>
    <string name="get_rating_failed">Error getting rating</string>
    <string name="act_participants_failed">Getting of participants failed</string>
    <string name="get_route_coord_failed">Get Route Coordinates failed</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="confirm_delete">Are you sure you want to delete this activity?</string>
    <string name="settings">Settings</string>
    <string name="register">Register</string>
    <string name="info">Info</string>
    <string name="owner">Owner:</string>
    <string name="near_activity">You are near an activity!</string>
    <string name="rate_activity">Rate the activity you just finished.</string>
    <string name="join_activity">Do you want to join this activity?</string>
    <string name="public_account">Public Account</string>
    <string name="get_profile_failed">Get profile failed</string>
    <string name="name_invalid">Not a valid name</string>
    <string name="bio_invalid">Bio must be at least one character</string>
    <string name="activity_deleted">Activity Deleted!</string>
    <string name="route_too_big">Route is too big to get directions!</string>
    <string name="editProfile">Edit Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_user">Are you sure you want to delete your account?</string>
    <string name="user_deleted">User deleted with success</string>
    <string name="register_comment_failed">Register comment failed</string>
    <string name="joined_activity">Joined Activity!</string>
    <string name="unjoined_activity">Unjoined Activity!</string>
    <string name="register_comment">Comment Registered!</string>
    <string name="get_comments_failed">Get Comments Failed</string>
    <string name="prompt_bio">Biography:</string>
    <string name="phone_number_org">phone number<font color='#ff477e'>*</font></string>
    <string name="confirm_users">Please confirm the participants that attended this activity</string>
    <string name="confirm_act_participants">Confirm Activity Participants</string>
    <string name="confirm_delete_comment">Are you sure you want to delete comment?</string>
    <string name="comment_deleted">Comment deleted with success</string>
    <string name="delete_comment_failed">Failed deleting comment</string>
    <string name="title_select_activity_dest">Select Activity Destination</string>
    <string name="description">Description: </string>
    <string name="hint_description">Short description of the activity</string>
    <string name="location_unavailable">Need to add activity location</string>
    <string name="user_info">User Info</string>
    <string name="account_private">This account is private</string>
    <string name="podium_info">Join activities to earn points</string>
    <string name="confirm_participants_failed">Wasn\'t able to confirm participants presence</string>
    <string name="confirmed_participants">Participants confirmed with success</string>
    <string name="participants">Participants:</string>
    <string name="activity">Activity:</string>
    <string name="not_deleted_act">This activity was disabled</string>
    <string name="share">Share our App</string>
    <string name="check_website">Check our website!</string>
    <string name="username_already_used">Username or email already in use</string>
    <string name="activity_not_active">Activity Deactivated</string>
    <string name="restore_activity">Want to restore this activity?</string>
    <string name="restore_activity_failed">Couldn\'t restore this activity</string>
    <string name="activity_restored">Activity was restored</string>
    <string name="add_number">Add your phone number</string>
    <string name="change_pass">Change Password</string>
    <string-array name="filter">
        <item>Health</item>
        <item>Children</item>
        <item>Nature</item>
        <item>Disabled</item>
        <item>Elderly</item>
        <item>Animals</item>
        <item>All</item>
    </string-array>
</resources>