<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_feed" />
    <item
        android:id="@+id/navigation_activities_data"
        android:icon="@drawable/ic_graphic"
        android:title="@string/title_activities_data" />
    <item
        android:id="@+id/navigation_new_activity"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/title_new_activity" />
    <item
        android:id="@+id/navigation_podium"
        android:icon="@drawable/ic_trophy"
        android:title="@string/title_podium" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>