<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_feed"
        android:name="pt.vow.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />
    <!--<fragment
        android:id="@+id/navigation_activities_data"
        android:name="pt.vow.ui.activitiesData.MyActivitiesDataFragment"
        android:label="@string/title_activities_data"
        tools:layout="@layout/fragment_activities_data" />-->
    <fragment
        android:id="@+id/navigation_new_activity"
        android:name="pt.vow.ui.newActivity.NewActivityFragment"
        android:label="@string/title_new_activity"
        tools:layout="@layout/fragment_new_activity" />
    <fragment
        android:id="@+id/navigation_podium"
        android:name="pt.vow.ui.podium.PodiumFragment"
        android:label="@string/title_podium"
        tools:layout="@layout/fragment_podium" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="pt.vow.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>