<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_person"
    app:startDestination="@+id/navigation_map_person">

    <fragment
        android:id="@+id/navigation_map_person"
        android:name="pt.vow.ui.maps.MapPersonFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map_person" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="pt.vow.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="pt.vow.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>