<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.vow.ui.register.RegisterActivity"
    tools:visibility="visible">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="178dp">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:id="@+id/textInputLayout"
                android:hint="@string/type">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/organization_title"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:visibility="visible"
                tools:visibility="visible" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/passwordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/organizationSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/website"
                android:inputType="textUri"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textViewDateBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/date_birth"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


            <DatePicker
                android:id="@+id/dateBirth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:visibility="gone"
                tools:visibility="visible" />
            <Switch
                android:id="@+id/switch1"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/private_account" />
            <Button
                android:id="@+id/confirmBttn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:enabled="false"
                android:text="@string/next"
                tools:visibility="visible" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>