<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enroll_activity">

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="255dp"
        android:layout_height="24dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewNumParticipants"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNumParticipants"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumParticipants"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textViewNumParticipants"
        android:layout_width="257dp"
        android:layout_height="23dp"
        android:text="@string/number_participants"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="255dp"
        android:layout_height="24dp"
        android:layout_marginBottom="484dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/enrollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/textViewActName"
        android:layout_width="255dp"
        android:layout_height="24dp"
        android:text="@string/activity_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/textViewActOwner"
        android:layout_width="255dp"
        android:layout_height="24dp"
        android:text="@string/organization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewActName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewActName"
        app:layout_constraintTop_toBottomOf="@+id/textViewActName"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="336dp"
        android:layout_height="34dp"
        android:layout_marginBottom="516dp"
        android:text="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewActOwner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewActOwner"
        app:layout_constraintTop_toBottomOf="@+id/textViewActOwner"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/btnDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/directions"
        app:layout_constraintEnd_toEndOf="@+id/textViewDuration"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewDuration"
        app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="46dp" />
</androidx.constraintlayout.widget.ConstraintLayout>